# nova-sight-lpr

./: .gitignore  README.md  config.py  local.py  main.py  pyproject.toml
core/: detector.py  engine.py  video_source.py
db/: database.py
logic/: box_counter.py  people_tracker.py
